fixed 1px layout bug

--- a/ftw/blog/browser/stylesheets/blog.css
+++ b/ftw/blog/browser/stylesheets/blog.css
@@ -26,7 +26,7 @@ body.template-discussion_reply_form .documentActions {
 
 /* another exception for actionbar and edit menus */
 .blogView .actionsBar {
-    margin-top: -1em;
+    margin-top: -1.1em;
 }
 .blogView h1,
 .blogView #dropdown-contentmenu {
